--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   flutter_screenutil: ^5.8.4
   dio: ^5.3.1
   sizer_pro: ^2.1.0
+  google_fonts: ^5.1.0
+  get_storage: ^2.1.1
+  shake: ^2.2.0
 
 
 dev_dependencies:
