--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   get_storage: ^2.1.1
   shake: ^2.2.0
   flutter_svg: ^2.0.7
-
+  introduction_screen: ^3.1.11
 
 dev_dependencies:
   flutter_test:
