--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,11 @@ dependencies:
   get: ^4.6.5
   flutter_screenutil: ^5.8.4
   dio: ^5.3.1
-  sizer_pro: ^2.1.0
   google_fonts: ^5.1.0
   get_storage: ^2.1.1
   shake: ^2.2.0
   flutter_svg: ^2.0.7
+  flutter_secure_storage: ^8.0.0
 
 
 dev_dependencies:
