--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.7
   introduction_screen: ^3.1.11
   flutter_secure_storage: ^8.0.0
+  tutorial_coach_mark: ^1.2.9
 
 
 dev_dependencies:
