--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   introduction_screen: ^3.1.11
   flutter_secure_storage: ^8.0.0
   tutorial_coach_mark: ^1.2.9
-
+  syncfusion_flutter_charts: ^22.2.8
 
 dev_dependencies:
   flutter_test:
