--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   tutorial_coach_mark: ^1.2.9
   syncfusion_flutter_charts: ^22.2.8
   sprintf: ^7.0.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
