--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,1 +1,7 @@
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
 #include "Generated.xcconfig"
+
+APP_NAME = AITriage DEV
+ASSETCATALOG_COMPILER_APPICON_NAME=AppIcon
+MARKETING_VERSION = $(FLUTTER_BUILD_NAME)
+
