--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -4,4 +4,5 @@
 APP_NAME = AITriage DEV
 ASSETCATALOG_COMPILER_APPICON_NAME=AppIcon
 MARKETING_VERSION = $(FLUTTER_BUILD_NAME)
+FLUTTER_TARGET=lib/main_dev.dart
 
