--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -4,3 +4,4 @@
 APP_NAME = AITriage
 ASSETCATALOG_COMPILER_APPICON_NAME=AppIcon
 MARKETING_VERSION = $(FLUTTER_BUILD_NAME)
+FLUTTER_TARGET=lib/main_dev.dart
