--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   syncfusion_flutter_charts: ^22.2.8
   sprintf: ^7.0.0
   pin_code_fields: ^8.0.1
+  device_info_plus: ^9.0.3
+  package_info_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
