--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  # core
   get: ^4.6.5
   flutter_screenutil: ^5.8.4
   dio: ^5.3.1
@@ -27,6 +28,9 @@ dependencies:
   pin_code_fields: ^8.0.1
   device_info_plus: ^9.0.3
   package_info_plus: ^4.1.0
+  encrypt: ^5.0.1
+  pointycastle: ^3.7.3
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -39,5 +43,6 @@ flutter:
   assets:
     - lib/aitriage_core/asset/language/
     - lib/aitriage_core/asset/image/
+    - lib/aitriage_core/asset/key/
 
 
