--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   encrypt: ^5.0.1
   pointycastle: ^3.7.3
   cached_network_image: ^3.2.3
+  url_launcher: ^6.1.14
+  open_mail_app: ^0.4.5
 
 dev_dependencies:
   flutter_test:
