--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cached_network_image: ^3.2.3
   url_launcher: ^6.1.14
   open_mail_app: ^0.4.5
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
