--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   url_launcher: ^6.1.14
   open_mail_app: ^0.4.5
   connectivity_plus: ^4.0.2
+  hive: ^2.2.3
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.8
 
 flutter:
   uses-material-design: true
