--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,17 @@ dependencies:
   connectivity_plus: ^4.0.2
   hive: ^2.2.3
   path_provider: ^2.1.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   hive_generator: ^1.1.2
-  build_runner: ^2.1.8
+  build_runner: ^2.4.6
+  isar_generator: ^3.1.0+1
+  test: ^1.24.1
 
 flutter:
   uses-material-design: true
