--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  firebase_core: ^2.15.1
 
 dev_dependencies:
   flutter_test:
