--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   retry: ^3.1.2
   rxdart: ^0.27.7
   intl: ^0.18.1
-
+  number_paginator: ^0.3.2
   
 dev_dependencies:
   flutter_test:
