--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   rxdart: ^0.27.7
   intl: ^0.18.1
   number_paginator: ^0.3.2
+  image_picker: ^1.0.4
   
 dev_dependencies:
   flutter_test:
