--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,14 @@ dependencies:
   intl: ^0.18.1
   number_paginator: ^0.3.2
   image_picker: ^1.0.4
-  
+  app_settings: ^5.1.1
+  permission_handler: ^11.0.0
+  flutter_blue_plus: ^1.16.2
+  plugin_bluetooth_android:
+    path: ../bluetooth_plugin
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
