[skip-ci]Update .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ stages:          # List of stages for jobs, and their order of executionn
 aitriage:android:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
-    - cd android
+    - cd /StudioProjects/flutter_aitriage/android
     - bundle install
 
   script:
@@ -28,7 +28,7 @@ muratiai:ios:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
     - flutter pub get
-    - cd ios
+    - cd /StudioProjects/flutter_aitriage/ios
     - bundle install
   script:
     - fastlane develop
