--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ stages:          # List of stages for jobs, and their order of executionn
 aitriage:android:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
+    - cd /StudioProjects/flutter_aitriage/
+    - git pull
     - cd /StudioProjects/flutter_aitriage/android
     - bundle install
 
@@ -27,6 +29,8 @@ aitriage:android:develop:
 muratiai:ios:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
+    - cd /StudioProjects/flutter_aitriage/
+    - git pull
     - flutter pub get
     - cd /StudioProjects/flutter_aitriage/ios
     - bundle install
