--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   LANG: "en_US.UTF-8"
   GIT_STRATEGY: clone
   GIT_DEPTH: 10
+  GIT_CLONE_PATH: aitriage
 
 stages:          # List of stages for jobs, and their order of executionn
   - aitriage_upload_ios_android_develop
@@ -14,9 +15,7 @@ stages:          # List of stages for jobs, and their order of executionn
 aitriage:android:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
-    - cd StudioProjects/flutter_aitriage/
-    - git pull
-    - cd StudioProjects/flutter_aitriage/android
+    - cd /android
     - bundle install
 
   script:
@@ -29,10 +28,8 @@ aitriage:android:develop:
 muratiai:ios:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
-    - cd StudioProjects/flutter_aitriage/
-    - git pull
     - flutter pub get
-    - cd StudioProjects/flutter_aitriage/ios
+    - cd /ios
     - bundle install
   script:
     - fastlane develop
