--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@
 variables:
   LC_ALL: "en_US.UTF-8"
   LANG: "en_US.UTF-8"
-  GIT_STRATEGY: fetch
+  GIT_STRATEGY: clone
   GIT_DEPTH: 10
   GIT_CLONE_PATH: /Users/mac/builds/aitriage
 
@@ -15,7 +15,7 @@ stages:          # List of stages for jobs, and their order of executionn
 aitriage:android:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
-    - cd /android
+    - cd android
     - bundle install
 
   script:
@@ -29,7 +29,7 @@ muratiai:ios:develop:
   stage: aitriage_upload_ios_android_develop
   before_script:
     - flutter pub get
-    - cd /ios
+    - cd ios
     - bundle install
   script:
     - fastlane develop
